Firebase-course complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,19 +8,21 @@
 
         <mat-tab label="Beginners">
 
-            <courses-card-list
-                    [courses]="[]">
+            <app-courses-card-list 
+                (courseEdited)="reloadCourses()"
+                [courses]="beginnersCourses$ | async">
 
-            </courses-card-list>
+            </app-courses-card-list>
 
         </mat-tab>
 
         <mat-tab label="Advanced">
 
-            <courses-card-list
-                    [courses]="[]"
+            <app-courses-card-list 
+                (courseEdited)="reloadCourses()"
+                [courses]="advancedCourses$ | async"
 
-            ></courses-card-list>
+            ></app-courses-card-list>
 
         </mat-tab>
 
