--- a/src/app/course-dialog/course-dialog.component.css
+++ b/src/app/course-dialog/course-dialog.component.css
@@ -4,6 +4,11 @@
     display: block;
 }
 
+mat-dialog-content {
+  display: block;
+  width: 300px;
+}
+
 textarea {
     height: 100px;
     resize: vertical;
