--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -8,7 +8,7 @@
 
     </mat-card-header>
 
-    <img mat-card-image [src]="course.iconUrl">
+    <img mat-card-image [src]="course.uploadedImageUrl ? course.uploadedImageUrl : course.iconUrl">
 
     <mat-card-content>
         <p>{{course.titles.longDescription}}</p>
@@ -16,7 +16,7 @@
 
     <mat-card-actions class="course-actions">
 
-        <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.url]">
+        <button mat-button class="mat-raised-button mat-primary" [routerLink]="['/courses', course.iconUrl]">
             VIEW COURSE
         </button>
 
