--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-
+@import "~firebaseui/dist/firebaseui.css";
 
 @import "~@angular/material/theming";
 
@@ -45,7 +45,7 @@ $mat-custom-theme: (
 
 // Define a theme.
 $primary: mat-palette($mat-blue);
-$accent:  mat-palette($mat-custom-theme, A200, A100, A400); 
+$accent:  mat-palette($mat-custom-theme, A200, A100, A400);
 
 $theme: mat-light-theme($primary, $accent);
 
